--- a/.github/workflows/deploy.yml
+++ b/.github/workflows/deploy.yml
@@ -14,6 +14,8 @@ jobs:
       # Set up Terraform
       - name: Set up Terraform
         uses: hashicorp/setup-terraform@v1
+        with:
+          terraform_version: '1.3.0'  # Specify your desired Terraform version
 
       # Configure AWS credentials for Terraform
       - name: Configure AWS credentials for Terraform
@@ -30,13 +32,10 @@ jobs:
 
       # Run Terraform plan
       - name: Terraform Plan
-        run: terraform plan 
+        run: terraform plan -out=tfplan
         working-directory: terraform  # Ensure Terraform runs from the correct directory
 
       # Apply Terraform to create resources (e.g., ECR repositories)
       - name: Terraform Apply
-        run: terraform apply -auto-approve
+        run: terraform apply -auto-approve tfplan
         working-directory: terraform  # Ensure Terraform runs from the correct directory
-
-  
-     
