--- a/.github/workflows/deploy.yml
+++ b/.github/workflows/deploy.yml
@@ -30,12 +30,14 @@ jobs:
         run: terraform init
         working-directory: terraform  # Ensure Terraform runs from the correct directory
 
+      # Set TF_LOG to DEBUG
+      - name: Set TF_LOG to DEBUG
+        run: echo "TF_LOG=DEBUG" >> $GITHUB_ENV
+
       # Run Terraform plan
       - name: Terraform Plan
         run: terraform plan -out=tfplan
-        working-directory: terraform  # Ensure Terraform runs from the correct directory
-
-      # Apply Terraform to create resources (e.g., ECR repositories)
+        working-directory: terraform  #      # Apply Terraform to create resources (e.g., ECR repositories)
       - name: Terraform Apply
         run: terraform apply -auto-approve tfplan
         working-directory: terraform  # Ensure Terraform runs from the correct directory
