--- a/.github/workflows/deploy.yml
+++ b/.github/workflows/deploy.yml
@@ -34,9 +34,7 @@ jobs:
       - name: Set TF_LOG to DEBUG
         run: echo "TF_LOG=DEBUG" >> $GITHUB_ENV
 
-      # Run Terraform plan
-      - name: Terraform Plan
-        run: terraform plan -out=tfplan
+     : terraform plan -out=tfplan
         working-directory: terraform  # Ensure Terraform runs from the correct directory
 
       # Apply Terraform to create resources (e.g., ECR repositories)
