--- a/.github/workflows/deploy.yml
+++ b/.github/workflows/deploy.yml
@@ -27,8 +27,7 @@ jobs:
 
       # Initialize Terraform
       - name: Terraform Init
-        run: terraform init
-        working-directory: terraform  # Ensure Terraform runs from the correct directory
+         # Ensure Terraform runs from the correct directory
 
       # Set TF_LOG to DEBUG
       - name: Set TF_LOG to DEBUG
@@ -42,3 +41,16 @@ jobs:
       - name: Terraform Apply
         run: terraform apply -auto-approve 
         working-directory: terraform  # Ensure Terraform runs from the correct directory
+
+      # Install kubectl
+      - name: Install kubectl
+        run: |
+          curl -LO "https://storage.googleapis.com/kubernetes-release/release/$(curl -s https://storage.googleapis.com/kubernetes-release/release/stable.txt)/bin/linux/amd64/kubectl"
+          chmod +x ./kubectl
+          sudo mv ./kubectl /usr/local/bin/kubectl
+
+      # Apply Kubernetes manifests
+      - name: Apply Kubernetes Manifests
+        run: |
+          kubectl apply -f deployment.yaml
+          Checkout your code.
