--- a/.github/workflows/deploy.yml
+++ b/.github/workflows/deploy.yml
@@ -27,13 +27,14 @@ jobs:
 
       # Initialize Terraform
       - name: Terraform Init
-         # Ensure Terraform runs from the correct directory
+        run: terraform init
+        working-directory: terraform  # Ensure Terraform runs from the correct directory
 
       # Set TF_LOG to DEBUG
       - name: Set TF_LOG to DEBUG
         run: echo "TF_LOG=DEBUG" >> $GITHUB_ENV
 
-      - name: Terraform plan
+      - name: Terraform Plan
         run: terraform plan 
         working-directory: terraform
 
@@ -53,4 +54,4 @@ jobs:
       - name: Apply Kubernetes Manifests
         run: |
           kubectl apply -f deployment.yaml
-          Checkout your code.
+          kubectl apply -f service.yaml
