--- a/.github/workflows/deploy.yml
+++ b/.github/workflows/deploy.yml
@@ -34,9 +34,7 @@ jobs:
       - name: Set TF_LOG to DEBUG
         run: echo "TF_LOG=DEBUG" >> $GITHUB_ENV
 
-      - name: Terraform Plan
-        run: terraform plan 
-        working-directory: terraform
+     
 
       # Apply Terraform to create resources 
       - name: Terraform Apply
@@ -46,7 +44,7 @@ jobs:
       # Install kubectl
       - name: Install kubectl
         run: |
-         storage.googleapis.com/kubernetes-release/release/$(curl -s https://storage.googleapis.com/kubernetes-release/release/stable.txt)/bin/linux/amd64/kubectl"
+          curl -LO "https://storage.googleapis.com/kubernetes-release/release/$(curl -s https://storage.googleapis.com/kubernetes-release/release/stable.txt)/bin/linux/amd64/kubectl"
           chmod +x ./kubectl
           sudo mv ./kubectl /usr/local/bin/kubectl
 
