--- a/.github/workflows/deploy.yml
+++ b/.github/workflows/deploy.yml
@@ -34,7 +34,9 @@ jobs:
       - name: Set TF_LOG to DEBUG
         run: echo "TF_LOG=DEBUG" >> $GITHUB_ENV
 
-     
+      - name: Terraform Plan
+        run: terraform plan 
+        working-directory: terraform
 
       # Apply Terraform to create resources 
       - name: Terraform Apply
