--- a/terraform/deployment.yaml
+++ b/terraform/deployment.yaml
@@ -19,3 +19,15 @@ spec:
         image: 510278866235.dkr.ecr.us-east-1.amazonaws.com/appointment-service:latest
         ports:
         - containerPort: 3001
+        livenessProbe:
+          httpGet:
+            path: /health
+            port: 3001
+          initialDelaySeconds: 30
+          periodSeconds: 60
+        readinessProbe:
+          httpGet:
+            path: /health
+            port: 3001
+          initialDelaySeconds: 5
+          periodSeconds: 10
