--- a/.github/workflows/deploy.yml
+++ b/.github/workflows/deploy.yml
@@ -8,16 +8,17 @@ jobs:
   JOB1:
     runs-on: ubuntu-latest
     steps:
+      # Step 1: Checkout code
       - name: Checkout code
         uses: actions/checkout@v2
 
-      # Set up Terraform
+      # Step 2: Set up Terraform
       - name: Set up Terraform
         uses: hashicorp/setup-terraform@v1
         with:
-          terraform_version: '1.3.2'  # Updated Terraform version
+          terraform_version: '1.3.2'  # Ensure Terraform version matches your setup
 
-      # Configure AWS credentials for Terraform
+      # Step 3: Configure AWS credentials for Terraform
       - name: Configure AWS credentials for Terraform
         uses: aws-actions/configure-aws-credentials@v1
         with:
@@ -25,28 +26,17 @@ jobs:
           aws-secret-access-key: ${{ secrets.AWS_SECRET_ACCESS_KEY }}
           aws-region: ${{ secrets.AWS_REGION }}
 
-      # Initialize Terraform
+      # Step 4: Initialize Terraform
       - name: Terraform Init
         run: terraform init
         working-directory: terraform  # Ensure Terraform runs from the correct directory
 
+      # Step 5: Terraform Plan
       - name: Terraform Plan
         run: terraform plan 
         working-directory: terraform
 
-      # Apply Terraform to create resources 
+      # Step 6: Apply Terraform to create resources 
       - name: Terraform Apply
         run: terraform apply -auto-approve 
         working-directory: terraform  # Ensure Terraform runs from the correct directory
-
-      # Install kubectl
-      - name: Install kubectl
-        run: |
-          curl -LO "https://storage.googleapis.com/kubernetes-release/release/$(curl -s https://storage.googleapis.com/kubernetes-release/release/stable.txt)/bin/linux/amd64/kubectl"
-          chmod +x ./kubectl
-          sudo mv ./kubectl /usr/local/bin/kubectl
-
-      # Apply Kubernetes manifests
-      - name: Apply Kubernetes Manifests
-        run: |
-          kubectl apply -f service.yaml
